force-app/main/default/objects/ConfiguracaoPacote__c/ConfiguracaoPacote__c.object-meta.xml
<CustomObject>
    <label>Configuração do Pacote</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Configuração do Pacote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurações dos Pacotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>