force-app/main/default/objects/ConfiguracaoPacote__c/fields/Empacotado__c.field-meta.xml
<CustomField>
    <fullName>Empacotado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empacotado</label>
    <type>Checkbox</type>
</CustomField>