force-app/main/default/objects/ConfiguracaoPacote__c/fields/Obrigatorio__c.field-meta.xml
<CustomField>
    <fullName>Obrigatorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obrigatório</label>
    <type>Checkbox</type>
</CustomField>