force-app/main/default/objects/ConfiguracaoPacote__c/fields/Posicao__c.field-meta.xml
<CustomField>
    <fullName>Posicao__c</fullName>
    <label>Posição</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>