force-app/main/default/objects/ConfiguracaoPacote__c/fields/ProdutoPacote__c.field-meta.xml
<CustomField>
    <fullName>ProdutoPacote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto do Pacote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ServicosTaxas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Configurações dos Pacotes</relationshipLabel>
    <relationshipName>Configuracoes_dos_Pacotes</relationshipName>
    <type>Lookup</type>
</CustomField>