force-app/main/default/objects/ConfiguracaoPacote__c/fields/ProdutoPai__c.field-meta.xml
<CustomField>
    <fullName>ProdutoPai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Pai</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Configurações dos Pacotes</relationshipLabel>
    <relationshipName>ConfiguracoesPacotes</relationshipName>
    <type>Lookup</type>
</CustomField>