force-app/main/default/objects/ConfiguracaoPacote__c/fields/QuantidadePadrao__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePadrao__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantidade Padrão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>