force-app/main/default/objects/ConfiguracaoPacote__c/fields/QuantidadeRelativa__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeRelativa__c</fullName>
    <label>Quantidade Relativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pelo Padrão</fullName>
                <default>true</default>
                <label>Pelo Padrão</label>
            </value>
            <value>
                <fullName>Por Passageiros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>