force-app/main/default/objects/ConfiguracaoPacote__c/fields/Selecionado__c.field-meta.xml
<CustomField>
    <fullName>Selecionado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selecionado</label>
    <type>Checkbox</type>
</CustomField>